﻿[27/5/2019]
- [Bug] Fix adding traffic not exists when adding new car.
- [Bug] Fix DateOfBirth field in identity register.
- Imporve traffic sorting.
- [Feature] Update car information (Change car's owner or traffic)

[6/6/2019]
- [Bug] Fix View Release notes.
- Add New Car as stolen

[8/6/2019]
- Add Check for car is stolen
- Add Get All cars for specific user with ability to sort them.

[10/6/2019]
- Add Reported as stolen when display cars info.
- Add mark plate is stolen when trying to stole it.

[13/6/2019]
- Refactor code for readability and optimization
= All
	- Add get cars for specific user (can use it for current logged in user)
	- Now user can report car is stolen by car plate number
= Web
	- Add get all stolen cars list
	- Add get all cars list