@@ -1,0 +1,8 @@
+﻿namespace SmartPlate.API.Dto.Users
+{
+    public class UserForSimpleDetailsDto
+    {
+        public string Id { get; set; }
+        public string Name { get; set; }
+    }
+}
